networkpolicy/networkpolicy__basic_kafka_setup__mongodb__all__mongodb__egress__ports__mongodb__nr61__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb--all--mongodb--egress--ports--mongodb--nr61
  namespace: mongodb
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: mongodb
